--- a/about/index.html
+++ b/about/index.html
@@ -9,13 +9,6 @@ tagline: His name is my name, too.
 	<h1 class="blockHeader-main">About</h1>
 </header>
 
-<p>I’m a web designer and student working in Orlando, Florida.</p>
+<p>I'm a designer, front-end developer, and student at the University of Central Florida. </p>
 
-<a href="mailto:john@johndjameson.com" class="btn">Email Me</a>
-
-<ul>
-	<li><a href="https://twitter.com/johndjameson">Twitter</a></li>
-	<li><a href="http://www.linkedin.com/in/johndjameson">LinkedIn</a></li>
-	<li><a href="http://codepen.io/johndjameson">CodePen</a></li>
-	<li><a href="http://dribbble.com">Dribbble</a></li>
-</ul>
+<p><a href="mailto:john@johndjameson.com" class="btn">Email Me</a></p>
