--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ title: Home
 
 <div class="preview">
 	<h2 class="preview-title"><a href="{{post.url}}">{{post.title-display}}</a></h2>
-	<p class="preview-date">{{ post.date | date: "%B %d, %Y" }}</p>
+	<!-- <p class="preview-date">{{ post.date | date: "%B %d, %Y" }}</p> -->
 	<p class="preview-tagline">{{post.tagline}}</p>
 	<!-- <p><a class="preview-continue" href="{{post.url}}">Continue reading&nbsp;&raquo;</a></p> -->
 </div>
