Grid, RSS Icon, refactoring, new homepage

--- a/about/index.html
+++ b/about/index.html
@@ -1,13 +1,8 @@
 ---
 layout: default
 title: About
-greeter: About
-tagline: His name is my name, too.
+title-display: About
 ---
-
-<header class="blockHeader">
-	<h1 class="blockHeader-main">About</h1>
-</header>
 
 <p>I'm a designer, front-end developer, and student at the University of Central Florida. </p>
 
