--- a/index.html
+++ b/index.html
@@ -9,40 +9,34 @@ title-display: Articles
 {% if post.categories contains 'blog' or post.categories contains 'dev' %}
 
 <div class="preview--latest">
+	<p class="preview-date">{{ post.date | date: "%b %d, %Y" }}</p>
+
 	<h2 class="preview-title"><a href="{{post.url}}">{{post.title-display}}</a></h2>
 	<p class="preview-tagline">{{post.tagline}}</p>
+
 	<p>{{post.excerpt | replace:">1</a></sup>","></a></sup>" | strip_html}}</p>
 	<p><a href="{{post.url}}">Continue&nbsp;Reading&nbsp;&raquo;</a></p>
 </div>
 {% endif %}
 {% endfor %}
 
-
-<div class="l-row">
-<div class="l-grid">
-{% for post in site.posts offset:1 limit:2 %}
+{% for post in site.posts offset:1 limit:3 %}
 {% if post.categories contains 'blog' or post.categories contains 'dev' %}
-
-<div class="l-grid-box--6">
 	<div class="preview--recent">
+		<p class="preview-date">{{ post.date | date: "%b %d, %Y" }}</p>
+
 		<h2 class="preview-title"><a href="{{post.url}}">{{post.title-display}}</a></h2>
 		<p class="preview-tagline">{{post.tagline}}</p>
 	</div>
-</div>
-
 {% endif %}
 {% endfor %}
-</div>
-</div>
 
-
-{% for post in site.posts offset:3 %}
+{% for post in site.posts offset:4 %}
 {% if post.categories contains 'blog' or post.categories contains 'dev' %}
-<!-- or post.categories contains 'dev' -->
+	<div class="preview--old">
+		<p class="preview-date">{{ post.date | date: "%b %d, %Y" }}</p>
 
-<div class="preview--old">
-	<h2 class="preview-title"><a href="{{post.url}}">{{post.title-display}}</a></h2>
-	<p class="preview-tagline">{{post.tagline}}</p>
-</div>
+		<h2 class="preview-title"><a href="{{post.url}}">{{post.title-display}}</a></h2>
+	</div>
 {% endif %}
 {% endfor %}
