--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 layout: default
 title: Home
 title-display: Articles
+tagline: Web designer and student in Orlando, Florida. Let's get Sassy together.
 ---
 
 <div class="l-grid">
@@ -11,7 +12,7 @@ title-display: Articles
 		<p>I'm John—<strong>web designer</strong> and student at the University of Central Florida.</p>
 		<p>When not debating semantic <abbr>HTML</abbr>, I enjoy learning <strong><abbr>CSS</abbr> architecture</strong>, as well as usabilty, branding, and all things <strong>front-end</strong>.</p>
 
-		<p>I'm also on the <em>Internet</em>.</p>
+		<p>I'm also on the <em>Internet</em>:</p>
 
 		<ul class="list--inline">
 			<li><a href="https://twitter.com/johndjameson">Twitter</a></li>
@@ -31,6 +32,8 @@ title-display: Articles
 			<p class="preview-tagline">{{post.tagline}}</p>
 
 			<p>{{post.excerpt | replace:">1</a></sup>","></a></sup>" | strip_html}}</p>
+
+			<p><a href="{{post.url}}">Continue Reading &raquo;</a></p>
 		</div>
 		{% endfor %}
 
