First post content pass, heading heights, smart quotes

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ teaser: Front-end developer and designer in Orlando, Florida. Let's get Sassy to
 
 	<aside class="l-grid-box--4">
 		<h1>About Me</h1>
-		<p>I'm John—<strong>web designer</strong> and student at the University of Central Florida.</p>
+		<p>I'm John D. Jameson—student and <strong>web designer</strong> at the University of Central Florida.</p>
 		<p>When not busy debating semantic <abbr>HTML</abbr>, I enjoy learning <strong><abbr>CSS</abbr> architecture</strong>, as well as usabilty, branding, and all things <strong>front-end</strong>.</p>
 
 		<p>I'm also on the <em>Internet</em>:</p>
