--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ teaser: Front-end developer and designer in Orlando, Florida. Let's get Sassy to
 	<main class="l-grid-box--8">
 		<h1>Blog</h1>
 
-		{% for post in site.posts limit:1 %}
+		{% for post in site.categories.blog limit:1 %}
 		<div class="preview">
 			<p class="preview-date">{{ post.date | date: "%b %d, %Y" }}</p>
 			<h2 class="preview-title"><a href="{{post.url}}">{{post.title-display}}</a></h2>
@@ -24,7 +24,7 @@ teaser: Front-end developer and designer in Orlando, Florida. Let's get Sassy to
 		</div>
 		{% endfor %}
 
-		{% for post in site.posts offset:1 %}
+		{% for post in site.categories.blog offset:1 %}
 			<div class="preview">
 				<p class="preview-date">{{ post.date | date: "%b %d, %Y" }}</p>
 				<h2 class="preview-title"><a href="{{post.url}}">{{post.title-display}}</a></h2>
@@ -39,13 +39,16 @@ teaser: Front-end developer and designer in Orlando, Florida. Let's get Sassy to
 		<p>I'm John D. Jameson—student and <strong>web designer</strong> at the University of Central Florida.</p>
 		<p>When not busy debating semantic <abbr>HTML</abbr>, I enjoy learning <strong><abbr>CSS</abbr> architecture</strong>, as well as usabilty, branding, and all things <strong>front-end</strong>.</p>
 
-		<p>I'm also on the <em>Internet</em>:</p>
-
-		<ul class="list--table">
-			<li><a href="https://twitter.com/johndjameson">Twitter</a></li>
-			<li><a href="http://dribbble.com/johndjameson">Dribbble</a></li>
-			<li><a href="http://codepen.io/johndjameson">CodePen</a></li>
-			<li><a href="https://github.com/johndjameson">GitHub</a></li>
+		<ul class="list--icon">
+			<li>
+				<a href="https://twitter.com/johndjameson"><i class="icon--twitter" aria-hidden="true"></i></a>
+			</li>
+			<li>
+				<a href="http://dribbble.com/johndjameson"><i class="icon--dribbble" aria-hidden="true"></i></a>
+			</li>
+			<li>
+				<a href="https://github.com/johndjameson"><i class="icon--github" aria-hidden="true"></i></a>
+			</li>
 		</ul>
 	</aside>
 
