Content pass, tweaks

--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@ teaser: Front-end developer and designer in Orlando, Florida. Let's get Sassy to
 		<div class="preview">
 			<p class="preview-date">{{ post.date | date: "%b %d, %Y" }}</p>
 			<h2 class="preview-title"><a href="{{post.url}}">{{post.title-display}}</a></h2>
-			<p class="preview-teaser">{{post.teaser}}</p>
 
 			<p>{{post.lead}}</p>
 
@@ -36,18 +35,18 @@ teaser: Front-end developer and designer in Orlando, Florida. Let's get Sassy to
 
 	<aside class="l-grid-box--4">
 		<h1>About Me</h1>
-		<p>I'm John D. Jameson—student and <strong>web designer</strong> at the University of Central Florida.</p>
-		<p>When not busy debating semantic <abbr>HTML</abbr>, I enjoy learning <strong><abbr>CSS</abbr> architecture</strong>, as well as usabilty, branding, and all things <strong>front-end</strong>.</p>
+		<p>I’m John—<strong>problem solver</strong> and the Internet's Blacksmith.</p>
+		<p>When not busy debating semantic <abbr>HTML</abbr>, I enjoy learning <strong><abbr>CSS</abbr> architecture</strong>, as well as design, typography, and all things <strong>front-end</strong>.</p>
 
 		<ul class="list--icon">
 			<li>
 				<a href="https://twitter.com/johndjameson"><i class="icon--twitter" aria-hidden="true"></i></a>
 			</li>
 			<li>
-				<a href="http://dribbble.com/johndjameson"><i class="icon--dribbble" aria-hidden="true"></i></a>
+				<a href="https://github.com/johndjameson"><i class="icon--github" aria-hidden="true"></i></a>
 			</li>
 			<li>
-				<a href="https://github.com/johndjameson"><i class="icon--github" aria-hidden="true"></i></a>
+				<a href="http://dribbble.com/johndjameson"><i class="icon--dribbble" aria-hidden="true"></i></a>
 			</li>
 		</ul>
 	</aside>
