Fixed footnote #, bio, base line-height

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ teaser: Front-end developer and designer in Orlando, Florida. Let's get Sassy to
 
 	<aside class="l-grid-box--4">
 		<h1>About Me</h1>
-		<p>I’m John—<strong>web developer</strong> and problem solver in Orlando,&nbsp;<abbr>FL</abbr>.</p>
+		<p>I’m John—<strong>web designer</strong> and developer in Orlando, Florida.</p>
 		<p>When not busy debating semantic <abbr>HTML</abbr>, I enjoy learning <strong><abbr>CSS</abbr> architecture</strong>, as well as typography, design, and all things <strong>front&#x2011;end</strong>.</p>
 
 		<ul class="list--icon">
