--- a/app/index.html
+++ b/app/index.html
@@ -50,13 +50,18 @@ description: Web designer and front-end developer in Orlando, Florida.
             <div class="grid-box grid-box--m--1of2">
                 <h2 class="tac">Recent Posts</h2>
 
-                {% for post in site.categories.blog offset:1 %}
-                <div>
-                    <h3 class="h2"><a href="{{post.url}}">{{post.title-display}}</a></h3>
-                    <p><time class="ttu">{{ post.date | date: "%B %d, %Y" }}</time></p>
-
+                <div class="recentPosts">
+                    {% for post in site.categories.blog offset:1 %}
+                    <div class="recentPosts-post">
+                        <h3 class="recentPosts-title">
+                            <a href="{{post.url}}">{{post.title-display}}</a>
+                        </h3>
+                        <p class="recentPosts-date">
+                            <time>{{ post.date | date: "%B %d, %Y" }}</time>
+                        </p>
+                    </div>
+                    {% endfor %}
                 </div>
-                {% endfor %}
             </div>
 
         </div>
