--- a/app/index.html
+++ b/app/index.html
@@ -2,15 +2,16 @@
 layout: default
 title: Home
 description: Web designer and front-end developer in Orlando, Florida.
+dribbble: true
 ---
 
-<div class="row">
+<section class="row mbm">
     <div class="cell">
 
         <div class="grid">
-            <div class="grid-box grid-box--m--1of2">
-                <h1>John D. Jameson</h1>
-                <p>Web designer and front-end developer in Orlando, Florida.</p>
+            <div class="grid-box grid-box--m--3of5 grid-box--l--1of2">
+                <h1 class="mtm">John D. Jameson</h1>
+                <p>Web designer and front-end developer in Orlando,&nbsp;Florida.</p>
                 <p>I’m passionate about typography, lifelong learning, and building useful things for <em>people</em>.</p>
 
                 <ul class="list--inline">
@@ -20,18 +21,18 @@ description: Web designer and front-end developer in Orlando, Florida.
                     <li class="list-item"><a href="">GitHub</a></li>
                 </ul>
 
-                <a href="" class="btn">Résumé (PDF)</a>
+                <!-- <a href="" class="btn mbl">Résumé (PDF)</a> -->
             </div>
 
-            <div class="grid-box grid-box--m--1of2">
+            <div class="grid-box grid-box--m--2of5 grid-box--l--1of2">
                 <img style="opacity: 0.85;" src="/img/ampersand-code.png" alt="A ampersand atop JavaScript">
             </div>
         </div>
 
     </div>
-</div>
+</section>
 
-<main class="row">
+<section class="row mbm">
     <div class="cell">
 
         <div class="grid">
@@ -62,10 +63,12 @@ description: Web designer and front-end developer in Orlando, Florida.
                     </div>
                     {% endfor %}
                 </div>
-                <a href="/blog/">Read More on the Blog &raquo;</a>
+                <a class="btn mts" href="/blog/">More Posts →</a>
             </div>
 
         </div>
 
     </div>
-</main>
+</section>
+
+<section class="js-dribbble"></section>
