updated post/sidenote styles

--- a/app/index.html
+++ b/app/index.html
@@ -5,7 +5,7 @@ description: Web designer and front-end developer in Orlando, Florida.
 dribbble: true
 ---
 
-<section class="row mbm">
+<section class="row mbl">
     <div class="cell">
         <div class="hero">
             <div class="grid">
@@ -34,7 +34,7 @@ dribbble: true
     </div>
 </section>
 
-<section class="row">
+<section class="row mbm">
     <div class="cell">
 
         <div class="grid">
