--- a/app/index.html
+++ b/app/index.html
@@ -11,9 +11,9 @@ dribbble: true
             <div class="grid">
                 <div class="grid-box grid-box--m--3of5 grid-box--l--1of2">
 
-                    <h1 class="hero-title">John D. Jameson</h1>
-                    <p>Web designer and front&#8209;end developer in Orlando,&nbsp;Florida.</p>
-                    <p>I’m passionate about typography, lifelong learning, and building useful things for <em>people</em>.</p>
+                    <h1 class="hero-title">Hey, there.</h1>
+                    <p>I&rsquo;m John D. Jameson&mdash;a web designer and front&#8209;end developer in Orlando,&nbsp;Florida.</p>
+                    <p>I write <abbr>CSS</abbr> and love typography, lifelong learning, and building useful things for <em>people</em>.</p>
 
                     <ul class="list--inline">
                         <li class="list-item"><a href="">Twitter</a></li>
