permalinks, footer, hero copy

--- a/app/index.html
+++ b/app/index.html
@@ -13,7 +13,7 @@ dribbble: true
 
                     <h1 class="hero-title">Hey, there.</h1>
                     <p>I&rsquo;m John D. Jameson&mdash;a web designer and front&#8209;end developer in Orlando,&nbsp;Florida.</p>
-                    <p>I write <abbr>CSS</abbr> and love typography, lifelong learning, and building useful things for <em>people</em>.</p>
+                    <p>I help people learn to code, and geek out over <abbr>CSS</abbr>&nbsp;architecture and web&nbsp;typography.</p>
 
                     <ul class="list--inline">
                         <li class="list-item"><a href="">Twitter</a></li>
