--- a/app/index.html
+++ b/app/index.html
@@ -15,11 +15,31 @@ dribbble: true
                     <p>I&rsquo;m John D. Jameson&mdash;a web designer and front&#8209;end developer in Orlando,&nbsp;Florida.</p>
                     <p>I help people learn to code, and geek out over <abbr>CSS</abbr>&nbsp;architecture and web&nbsp;typography.</p>
 
-                    <ul class="list--inline">
-                        <li class="list-item"><a href="">Twitter</a></li>
-                        <li class="list-item"><a href="">Dribbble</a></li>
-                        <li class="list-item"><a href="">CodePen</a></li>
-                        <li class="list-item"><a href="">GitHub</a></li>
+                    <ul class="list--inline tsxxl">
+                        <li class="list-item">
+                            <a href="https://twitter.com/johndjameson">
+                                <i class="icon icon--twitter" aria-hidden="true"></i>
+                                <span class="vh">Twitter</span>
+                            </a>
+                        </li>
+                        <li class="list-item">
+                            <a href="https://dribbble.com/johndjameson">
+                                <i class="icon icon--dribbble" aria-hidden="true"></i>
+                                <span class="vh">Dribbble</span>
+                            </a>
+                        </li>
+                        <li class="list-item">
+                            <a href="http://codepen.io/johndjameson/">
+                                <i class="icon icon--codepen" aria-hidden="true"></i>
+                                <span class="vh">CodePen</span>
+                            </a>
+                        </li>
+                        <li class="list-item">
+                            <a href="https://github.com/johndjameson">
+                                <i class="icon icon--github" aria-hidden="true"></i>
+                                <span class="vh">GitHub</span>
+                            </a>
+                        </li>
                     </ul>
 
                     <!-- <a href="" class="btn mbl">Résumé (PDF)</a> -->
