--- a/app/index.html
+++ b/app/index.html
@@ -83,7 +83,7 @@ dribbble: true
                     </li>
                     {% endfor %}
                 </ul>
-                <a class="btn mts" href="/blog/">My Sweet Blog →</a>
+                <a class="btn mtm" href="/blog/">My Sweet Blog →</a>
             </div>
         </div>
 
