imageFigure, quotation, kbd, rwd whitespace

--- a/app/index.html
+++ b/app/index.html
@@ -5,7 +5,7 @@ description: Web designer and front-end developer in Orlando, Florida.
 dribbble: true
 ---
 
-<section class="row mbl">
+<section class="row">
     <div class="cell">
         <div class="hero">
             <div class="grid">
